# mmif-summarizer

./: .gitignore  README.md  input.mmif  metadata.json  metadata.py  pbcore.template  run.py  server.py
code/: Dockerfile  __init__.py  analyze-mmif-storage.py  app.py  config.py  create_html.py  cut.py  graph.py  input.mmif  json2xml.py  main.py  metadata.py  names.py  pyproject.toml  requirements.txt  run.py  run_html.py  run_summarizer.py  server.py  summary.py  test.py  utils.py  visualize.py
code/examples/: dot-v9.html  input-v7.mmif  input-v9.mmif  output-v7.xml  output-v9.json  output-v9.xml
code/scripts/: analyze_summary.py  pretty.py  run.sh  select.py
code/summarizer/: README.md  __init__.py  config.py  graph.py  summary.py  summary2html.py  utils.py
docs/: developer-notes.md  publishing.md
docs/output/: index.md
docs/pipelines/: kaldi.md  spacy.md  swt-doctr.md  swt-llava.md  whisper.md
docs/pipelines/images/: mmif-graphs.graffle
