[project]
name = "summarizer-mv"
version = "0.2.2"
description = "MMIF Summarizer"
readme = "summarizer/README.md"
requires-python = ">=3.10"
dependencies = [
    "clams-python>=1.3.3",
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.scripts]
summarize = "summarizer:create_summary"
create-html = "summarizer:create_html"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["summarizer"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/examples",
  "/scripts",
  "out/",
  "mmif-storage.*.txt",
]
